{{$NEXT}}

0.005     2016-07-02 20:46:32 EDT
  - Add support for EXPERIMENTAL delayed_jobs field in stats method.
  - Add queue option to list_jobs method.
  - Add support for job dependencies.
  - Add parents option to enqueue method.
  - Add children and parents fields to job_info method.

0.004     2016-03-16 21:52:15 EDT
  - Bump Mojo::SQLite dependency to 0.020 for JSON1 support
  - Use JSON1 fields for job args and result
  - Use new Mojo::SQLite auto_migrate feature
  - Various optimizations from Minion::Backend::Pg including much faster dequeue

0.003     2015-11-13 20:19:45 EST
  - Updated to support Minion 4.0
  - Allow retry methods to change options for already inactive jobs

0.002     2015-10-30 17:35:29 EDT
  - Added support for retrying failed jobs automatically in Minion 3.01

0.001     2015-10-28 21:59:55 EDT
  - First release