@@ -141,6 +141,7 @@ $minion->add_task(fail => sub { die "Intentional failure!\n" });
 my $stats = $minion->stats;
 is $stats->{active_workers},   0, 'no active workers';
 is $stats->{inactive_workers}, 0, 'no inactive workers';
+is $stats->{enqueued_jobs},    0, 'no enqueued jobs';
 is $stats->{active_jobs},      0, 'no active jobs';
 is $stats->{failed_jobs},      0, 'no failed jobs';
 is $stats->{finished_jobs},    0, 'no finished jobs';
@@ -149,7 +150,9 @@ is $stats->{delayed_jobs},     0, 'no delayed jobs';
 $worker = $minion->worker->register;
 is $minion->stats->{inactive_workers}, 1, 'one inactive worker';
 $minion->enqueue('fail');
+is $minion->stats->{enqueued_jobs}, 1, 'one enqueued job';
 $minion->enqueue('fail');
+is $minion->stats->{enqueued_jobs}, 2, 'two enqueued jobs';
 is $minion->stats->{inactive_jobs}, 2, 'two inactive jobs';
 $job   = $worker->dequeue(0);
 $stats = $minion->stats;
